chore: lint _all_ the things